--- a/home/aerospace.toml
+++ b/home/aerospace.toml
@@ -10,8 +10,11 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-#    'exec-and-forget sketchybar',
+    'exec-and-forget sketchybar',
 ]
+
+exec-on-workspace-change = ['/bin/bash', '-c', 'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+
 
 # Start AeroSpace at login
 start-at-login = true
@@ -44,6 +47,11 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
 automatically-unhide-macos-hidden-apps = true
+
+[exec]
+    inherit-env-vars = true
+[exec.env-vars]
+    PATH = '/etc/profiles/per-user/jack/bin:${PATH}'
 
 # Possible values: (qwerty|dvorak|colemak)
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
